# triemap

./: CMakeLists.txt  LICENSE  README.md
examples/: 2d-triemap.cpp  CMakeLists.txt  README.md  aggregation.cpp  feature-flags.cpp  json.cpp  reduction.cpp
include/: triemap.h
include/algo/: reduce.h
include/io/: json.h
tests/: CMakeLists.txt  README.md  basics.cpp  traversal.cpp
triemap/: triemap.h
triemap/algo/: reduce.h
triemap/io/: json.h
